version/0.72/_sources/autoapi/pyedb/dotnet/database/edb_data/padstacks_data/EDBPadProperties.rst.txt






:class:`EDBPadProperties`
=========================


.. py:class:: pyedb.dotnet.database.edb_data.padstacks_data.EDBPadProperties(edb_padstack, layer_name, pad_type, p_edb_padstack)

   Bases: :py:obj:`object`


   
   Manages EDB functionalities for pad properties.


   :Parameters:

       **edb_padstack** : :class:`python:str`
           Inherited AEDT object.

       **layer_name** : :class:`python:str`
           Name of the layer.

       **pad_type**
           Type of the pad.













   .. rubric:: Examples

   >>> from pyedb import Edb
   >>> edb = Edb("myedb", edbversion="2026.1")
   >>> edb_pad_properties = edb.padstacks.definitions["MyPad"].pad_by_layer["TOP"]

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: EDBPadProperties

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~int_to_pad_type`
            - Convert an integer to an EDB.PadGeometryType.
          * - :py:attr:`~int_to_geometry_type`
            - Convert an integer to an EDB.PadGeometryType.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~geometry_type`
            - Geometry type.
          * - :py:attr:`~shape`
            - Get the shape of the pad.
          * - :py:attr:`~parameters_values`
            - Parameters.
          * - :py:attr:`~parameters_values_string`
            - Parameters value in string format.
          * - :py:attr:`~polygon_data`
            - Parameters.
          * - :py:attr:`~parameters`
            - Get parameters.
          * - :py:attr:`~offset_x`
            - Offset for the X axis.
          * - :py:attr:`~offset_y`
            - Offset for the Y axis.
          * - :py:attr:`~rotation`
            - Rotation.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~layer_name`
            - 
          * - :py:attr:`~pad_type`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.dotnet.database.edb_data.padstacks_data import EDBPadProperties

Property detail
---------------

.. py:property:: geometry_type
   :type: int


   
   Geometry type.





   :Returns:

       :class:`python:int`
           Type of the geometry.











   ..
       !! processed by numpydoc !!

.. py:property:: shape
   :type: str


   
   Get the shape of the pad.





   :Returns:

       :class:`python:str`
           Shape of the pad.











   ..
       !! processed by numpydoc !!

.. py:property:: parameters_values
   :type: list[float]


   
   Parameters.





   :Returns:

       :class:`python:list`
           List of parameters.











   ..
       !! processed by numpydoc !!

.. py:property:: parameters_values_string
   :type: list[str]


   
   Parameters value in string format.





   :Returns:

       :class:`python:list`
           List of parameters in string format.











   ..
       !! processed by numpydoc !!

.. py:property:: polygon_data
   :type: pyedb.dotnet.database.geometry.polygon_data.PolygonData


   
   Parameters.





   :Returns:

       :obj:`PolygonData`
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: parameters
   :type: collections.OrderedDict[str, pyedb.dotnet.database.edb_data.edbvalue.EdbValue]


   
   Get parameters.





   :Returns:

       :class:`python:dict`
           ..











   ..
       !! processed by numpydoc !!

.. py:property:: offset_x
   :type: str


   
   Offset for the X axis.





   :Returns:

       :class:`python:str`
           Offset for the X axis.











   ..
       !! processed by numpydoc !!

.. py:property:: offset_y
   :type: str


   
   Offset for the Y axis.





   :Returns:

       :class:`python:str`
           Offset for the Y axis.











   ..
       !! processed by numpydoc !!

.. py:property:: rotation
   :type: str


   
   Rotation.





   :Returns:

       :class:`python:str`
           Value for the rotation.











   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: layer_name

.. py:attribute:: pad_type



Method detail
-------------

.. py:method:: int_to_pad_type(val=0) -> Any

   
   Convert an integer to an EDB.PadGeometryType.


   :Parameters:

       **val** : :class:`python:int`
           ..



   :Returns:

       :obj:`object`
           EDB.PadType enumerator value.











   ..
       !! processed by numpydoc !!

.. py:method:: int_to_geometry_type(val=0) -> Any

   
   Convert an integer to an EDB.PadGeometryType.


   :Parameters:

       **val** : :class:`python:int`
           ..



   :Returns:

       :obj:`object`
           EDB.PadGeometryType enumerator value.











   ..
       !! processed by numpydoc !!




